--- a/sass/cloth.sass
+++ b/sass/cloth.sass
@@ -19,6 +19,10 @@
 	background-position: center
 	background-repeat: no-repeat
 	margin: auto
+	@include breakpoint(mobile)
+		background-size: 300px
+		margin: 0
+		background-position: 0
 
 @mixin pos-text
 	position: relative
@@ -74,8 +78,8 @@
 				background-image: url("../img/male/b2_1red.png")
 				.text2
 					@include pos-text
-					font-size: 20px
-					top: 185px
+					font-size: 15px
+					top: 180px
 					left: 30px
 
 			.pos3-m
@@ -91,9 +95,9 @@
 				background-image: url("../img/male/b4_1red.png")
 				.text4
 					@include pos-text
-					top: 185px
+					top: 180px
 					left: -35px
-					font-size: 20px
+					font-size: 15px
 		.f
 			display: none
 			.pos1-f
@@ -109,8 +113,8 @@
 				background-image: url("../img/female/g2_1red.png")
 				.text2
 					@include pos-text
-					font-size: 20px
-					top: 185px
+					font-size: 15px
+					top: 180px
 					left: 30px
 
 			.pos3-f
@@ -126,9 +130,9 @@
 				background-image: url("../img/female/g4_1red.png")
 				.text4
 					@include pos-text
-					top: 185px
+					top: 180px
 					left: -35px
-					font-size: 20px
+					font-size: 15px
 
 
 .work-area
