--- a/css/cloth.css
+++ b/css/cloth.css
@@ -1,14 +1,9 @@
 .preview-area {
   width: 65%;
-  display: inline-block;
-  height: 800px;
-  background-color: #e6e3e3; }
+  display: inline-block; }
   @media only screen and (max-width: 991px) {
     .preview-area {
-      width: 100%;
-      min-width: 500px;
-      min-height: 500px;
-      height: 600px; } }
+      width: 100%; } }
   .preview-area .preview-img {
     width: 100%;
     text-align: center;
@@ -22,40 +17,53 @@
         height: 50px;
         width: 50px; }
     .preview-area .preview-img .m {
-      display: block; }
+      display: block;
+      width: 100%; }
       .preview-area .preview-img .m .pos1-m {
         display: block;
+        position: relative;
         width: 500px;
         height: 500px;
-        background-size: cover;
+        background-size: 500px;
         background-position: center;
         background-repeat: no-repeat;
         margin: auto;
         background-image: url("../img/male/b1_1red.png"); }
         @media only screen and (max-width: 500px) {
           .preview-area .preview-img .m .pos1-m {
-            background-size: 300px;
-            margin: 0;
+            width: 100%;
+            background-size: contain; } }
+        @media only screen and (max-width: 500px) {
+          .preview-area .preview-img .m .pos1-m {
             background-position: 0; } }
         .preview-area .preview-img .m .pos1-m .text1 {
           position: relative;
           font-size: 30px;
           color: white;
-          top: 100px; }
+          position: relative;
+          top: 100px;
+          width: 200px;
+          margin: auto; }
+          @media only screen and (max-width: 500px) {
+            .preview-area .preview-img .m .pos1-m .text1 {
+              position: relative;
+              font-size: 20px;
+              top: 40%;
+              width: 30%; } }
       .preview-area .preview-img .m .pos2-m {
         display: none;
+        position: relative;
         width: 500px;
         height: 500px;
-        background-size: cover;
+        background-size: 500px;
         background-position: center;
         background-repeat: no-repeat;
         margin: auto;
         background-image: url("../img/male/b2_1red.png"); }
         @media only screen and (max-width: 500px) {
           .preview-area .preview-img .m .pos2-m {
-            background-size: 300px;
-            margin: 0;
-            background-position: 0; } }
+            width: 100%;
+            background-size: contain; } }
         .preview-area .preview-img .m .pos2-m .text2 {
           position: relative;
           font-size: 30px;
@@ -63,39 +71,48 @@
           font-size: 15px;
           top: 180px;
           left: 30px; }
+          @media only screen and (max-width: 500px) {
+            .preview-area .preview-img .m .pos2-m .text2 {
+              font-size: 12px;
+              left: 18px;
+              top: 205px; } }
       .preview-area .preview-img .m .pos3-m {
         display: none;
+        position: relative;
         width: 500px;
         height: 500px;
-        background-size: cover;
+        background-size: 500px;
         background-position: center;
         background-repeat: no-repeat;
         margin: auto;
         background-image: url("../img/male/b3_1red.png"); }
         @media only screen and (max-width: 500px) {
           .preview-area .preview-img .m .pos3-m {
-            background-size: 300px;
-            margin: 0;
-            background-position: 0; } }
+            width: 100%;
+            background-size: contain; } }
         .preview-area .preview-img .m .pos3-m .text3 {
           position: relative;
           font-size: 30px;
           color: white;
           top: 100px; }
+          @media only screen and (max-width: 500px) {
+            .preview-area .preview-img .m .pos3-m .text3 {
+              font-size: 20px;
+              top: 170px; } }
       .preview-area .preview-img .m .pos4-m {
         display: none;
+        position: relative;
         width: 500px;
         height: 500px;
-        background-size: cover;
+        background-size: 500px;
         background-position: center;
         background-repeat: no-repeat;
         margin: auto;
         background-image: url("../img/male/b4_1red.png"); }
         @media only screen and (max-width: 500px) {
           .preview-area .preview-img .m .pos4-m {
-            background-size: 300px;
-            margin: 0;
-            background-position: 0; } }
+            width: 100%;
+            background-size: contain; } }
         .preview-area .preview-img .m .pos4-m .text4 {
           position: relative;
           font-size: 30px;
@@ -103,41 +120,54 @@
           top: 180px;
           left: -35px;
           font-size: 15px; }
+          @media only screen and (max-width: 500px) {
+            .preview-area .preview-img .m .pos4-m .text4 {
+              font-size: 12px;
+              left: -20px;
+              top: 205px; } }
     .preview-area .preview-img .f {
-      display: none; }
+      display: none;
+      width: 100%; }
       .preview-area .preview-img .f .pos1-f {
         display: block;
+        position: relative;
         width: 500px;
         height: 500px;
-        background-size: cover;
+        background-size: 500px;
         background-position: center;
         background-repeat: no-repeat;
         margin: auto;
         background-image: url("../img/female/g1_1red.png"); }
         @media only screen and (max-width: 500px) {
           .preview-area .preview-img .f .pos1-f {
-            background-size: 300px;
-            margin: 0;
-            background-position: 0; } }
+            width: 100%;
+            background-size: contain; } }
         .preview-area .preview-img .f .pos1-f .text1 {
           position: relative;
           font-size: 30px;
           color: white;
-          top: 100px; }
+          position: relative;
+          top: 100px;
+          width: 200px;
+          margin: auto; }
+          @media only screen and (max-width: 500px) {
+            .preview-area .preview-img .f .pos1-f .text1 {
+              font-size: 20px;
+              top: 200px; } }
       .preview-area .preview-img .f .pos2-f {
         display: none;
+        position: relative;
         width: 500px;
         height: 500px;
-        background-size: cover;
+        background-size: 500px;
         background-position: center;
         background-repeat: no-repeat;
         margin: auto;
         background-image: url("../img/female/g2_1red.png"); }
         @media only screen and (max-width: 500px) {
           .preview-area .preview-img .f .pos2-f {
-            background-size: 300px;
-            margin: 0;
-            background-position: 0; } }
+            width: 100%;
+            background-size: contain; } }
         .preview-area .preview-img .f .pos2-f .text2 {
           position: relative;
           font-size: 30px;
@@ -145,39 +175,49 @@
           font-size: 15px;
           top: 180px;
           left: 30px; }
+          @media only screen and (max-width: 500px) {
+            .preview-area .preview-img .f .pos2-f .text2 {
+              position: relative;
+              top: 40%;
+              left: 20px;
+              font-size: 13px; } }
       .preview-area .preview-img .f .pos3-f {
         display: none;
+        position: relative;
         width: 500px;
         height: 500px;
-        background-size: cover;
+        background-size: 500px;
         background-position: center;
         background-repeat: no-repeat;
         margin: auto;
         background-image: url("../img/female/g3_1red.png"); }
         @media only screen and (max-width: 500px) {
           .preview-area .preview-img .f .pos3-f {
-            background-size: 300px;
-            margin: 0;
-            background-position: 0; } }
+            width: 100%;
+            background-size: contain; } }
         .preview-area .preview-img .f .pos3-f .text3 {
           position: relative;
           font-size: 30px;
           color: white;
           top: 100px; }
+          @media only screen and (max-width: 500px) {
+            .preview-area .preview-img .f .pos3-f .text3 {
+              font-size: 20px;
+              top: 170px; } }
       .preview-area .preview-img .f .pos4-f {
         display: none;
+        position: relative;
         width: 500px;
         height: 500px;
-        background-size: cover;
+        background-size: 500px;
         background-position: center;
         background-repeat: no-repeat;
         margin: auto;
         background-image: url("../img/female/g4_1red.png"); }
         @media only screen and (max-width: 500px) {
           .preview-area .preview-img .f .pos4-f {
-            background-size: 300px;
-            margin: 0;
-            background-position: 0; } }
+            width: 100%;
+            background-size: contain; } }
         .preview-area .preview-img .f .pos4-f .text4 {
           position: relative;
           font-size: 30px;
@@ -185,6 +225,11 @@
           top: 180px;
           left: -35px;
           font-size: 15px; }
+          @media only screen and (max-width: 500px) {
+            .preview-area .preview-img .f .pos4-f .text4 {
+              font-size: 12px;
+              left: -20px;
+              top: 200px; } }
 
 .work-area {
   width: 35%;
