--- a/css/cloth.css
+++ b/css/cloth.css
@@ -48,7 +48,7 @@
             .preview-area .preview-img .m .pos1-m .text1 {
               position: relative;
               font-size: 20px;
-              top: 40%;
+              top: 150px;
               width: 30%; } }
       .preview-area .preview-img .m .pos2-m {
         display: none;
@@ -153,7 +153,7 @@
           @media only screen and (max-width: 500px) {
             .preview-area .preview-img .f .pos1-f .text1 {
               font-size: 20px;
-              top: 200px; } }
+              top: 150px; } }
       .preview-area .preview-img .f .pos2-f {
         display: none;
         position: relative;
