--- a/css/cloth.css
+++ b/css/cloth.css
@@ -29,11 +29,11 @@
         background-repeat: no-repeat;
         margin: auto;
         background-image: url("../img/male/b1_1red.png"); }
-        @media only screen and (max-width: 500px) {
+        @media only screen and (max-width: 491px) {
           .preview-area .preview-img .m .pos1-m {
             width: 100%;
             background-size: contain; } }
-        @media only screen and (max-width: 500px) {
+        @media only screen and (max-width: 491px) {
           .preview-area .preview-img .m .pos1-m {
             background-position: 0; } }
         .preview-area .preview-img .m .pos1-m .text1 {
@@ -41,14 +41,14 @@
           font-size: 30px;
           color: white;
           position: relative;
-          top: 100px;
+          top: 125px;
           width: 200px;
           margin: auto; }
-          @media only screen and (max-width: 500px) {
+          @media only screen and (max-width: 491px) {
             .preview-area .preview-img .m .pos1-m .text1 {
               position: relative;
               font-size: 20px;
-              top: 150px;
+              top: 160px;
               width: 30%; } }
       .preview-area .preview-img .m .pos2-m {
         display: none;
@@ -60,7 +60,7 @@
         background-repeat: no-repeat;
         margin: auto;
         background-image: url("../img/male/b2_1red.png"); }
-        @media only screen and (max-width: 500px) {
+        @media only screen and (max-width: 491px) {
           .preview-area .preview-img .m .pos2-m {
             width: 100%;
             background-size: contain; } }
@@ -71,7 +71,7 @@
           font-size: 15px;
           top: 180px;
           left: 30px; }
-          @media only screen and (max-width: 500px) {
+          @media only screen and (max-width: 491px) {
             .preview-area .preview-img .m .pos2-m .text2 {
               font-size: 12px;
               left: 18px;
@@ -86,7 +86,7 @@
         background-repeat: no-repeat;
         margin: auto;
         background-image: url("../img/male/b3_1red.png"); }
-        @media only screen and (max-width: 500px) {
+        @media only screen and (max-width: 491px) {
           .preview-area .preview-img .m .pos3-m {
             width: 100%;
             background-size: contain; } }
@@ -95,10 +95,10 @@
           font-size: 30px;
           color: white;
           top: 100px; }
-          @media only screen and (max-width: 500px) {
+          @media only screen and (max-width: 491px) {
             .preview-area .preview-img .m .pos3-m .text3 {
               font-size: 20px;
-              top: 170px; } }
+              top: 160px; } }
       .preview-area .preview-img .m .pos4-m {
         display: none;
         position: relative;
@@ -109,7 +109,7 @@
         background-repeat: no-repeat;
         margin: auto;
         background-image: url("../img/male/b4_1red.png"); }
-        @media only screen and (max-width: 500px) {
+        @media only screen and (max-width: 491px) {
           .preview-area .preview-img .m .pos4-m {
             width: 100%;
             background-size: contain; } }
@@ -120,11 +120,11 @@
           top: 180px;
           left: -35px;
           font-size: 15px; }
-          @media only screen and (max-width: 500px) {
+          @media only screen and (max-width: 491px) {
             .preview-area .preview-img .m .pos4-m .text4 {
               font-size: 12px;
-              left: -20px;
-              top: 205px; } }
+              left: -17px;
+              top: 200px; } }
     .preview-area .preview-img .f {
       display: none;
       width: 100%; }
@@ -138,7 +138,7 @@
         background-repeat: no-repeat;
         margin: auto;
         background-image: url("../img/female/g1_1red.png"); }
-        @media only screen and (max-width: 500px) {
+        @media only screen and (max-width: 491px) {
           .preview-area .preview-img .f .pos1-f {
             width: 100%;
             background-size: contain; } }
@@ -147,13 +147,13 @@
           font-size: 30px;
           color: white;
           position: relative;
-          top: 100px;
+          top: 125px;
           width: 200px;
           margin: auto; }
-          @media only screen and (max-width: 500px) {
+          @media only screen and (max-width: 491px) {
             .preview-area .preview-img .f .pos1-f .text1 {
               font-size: 20px;
-              top: 150px; } }
+              top: 160px; } }
       .preview-area .preview-img .f .pos2-f {
         display: none;
         position: relative;
@@ -164,7 +164,7 @@
         background-repeat: no-repeat;
         margin: auto;
         background-image: url("../img/female/g2_1red.png"); }
-        @media only screen and (max-width: 500px) {
+        @media only screen and (max-width: 491px) {
           .preview-area .preview-img .f .pos2-f {
             width: 100%;
             background-size: contain; } }
@@ -175,7 +175,7 @@
           font-size: 15px;
           top: 180px;
           left: 30px; }
-          @media only screen and (max-width: 500px) {
+          @media only screen and (max-width: 491px) {
             .preview-area .preview-img .f .pos2-f .text2 {
               position: relative;
               top: 40%;
@@ -191,7 +191,7 @@
         background-repeat: no-repeat;
         margin: auto;
         background-image: url("../img/female/g3_1red.png"); }
-        @media only screen and (max-width: 500px) {
+        @media only screen and (max-width: 491px) {
           .preview-area .preview-img .f .pos3-f {
             width: 100%;
             background-size: contain; } }
@@ -200,10 +200,10 @@
           font-size: 30px;
           color: white;
           top: 100px; }
-          @media only screen and (max-width: 500px) {
+          @media only screen and (max-width: 491px) {
             .preview-area .preview-img .f .pos3-f .text3 {
               font-size: 20px;
-              top: 170px; } }
+              top: 160px; } }
       .preview-area .preview-img .f .pos4-f {
         display: none;
         position: relative;
@@ -214,7 +214,7 @@
         background-repeat: no-repeat;
         margin: auto;
         background-image: url("../img/female/g4_1red.png"); }
-        @media only screen and (max-width: 500px) {
+        @media only screen and (max-width: 491px) {
           .preview-area .preview-img .f .pos4-f {
             width: 100%;
             background-size: contain; } }
@@ -225,11 +225,11 @@
           top: 180px;
           left: -35px;
           font-size: 15px; }
-          @media only screen and (max-width: 500px) {
+          @media only screen and (max-width: 491px) {
             .preview-area .preview-img .f .pos4-f .text4 {
               font-size: 12px;
-              left: -20px;
-              top: 200px; } }
+              left: -25px;
+              top: 190px; } }
 
 .work-area {
   width: 35%;
@@ -361,6 +361,38 @@
         padding: 0px 3px 0px 3px;
         margin: 5px;
         background-image: url("../img/colors/camcmyk.jpg"); }
+      .work-area .tool-box .colors .brown {
+        display: inline-block;
+        width: 50px;
+        height: 50px;
+        border-radius: 10px;
+        padding: 0px 3px 0px 3px;
+        margin: 5px;
+        background-image: url("../img/colors/brown.jpg"); }
+      .work-area .tool-box .colors .deepskyblue {
+        display: inline-block;
+        width: 50px;
+        height: 50px;
+        border-radius: 10px;
+        padding: 0px 3px 0px 3px;
+        margin: 5px;
+        background-image: url("../img/colors/deepskyblue.jpg"); }
+      .work-area .tool-box .colors .skyblue {
+        display: inline-block;
+        width: 50px;
+        height: 50px;
+        border-radius: 10px;
+        padding: 0px 3px 0px 3px;
+        margin: 5px;
+        background-image: url("../img/colors/lightskyblue.jpg"); }
+      .work-area .tool-box .colors .gray {
+        display: inline-block;
+        width: 50px;
+        height: 50px;
+        border-radius: 10px;
+        padding: 0px 3px 0px 3px;
+        margin: 5px;
+        background-image: url("../img/colors/gray.jpg"); }
     .work-area .tool-box .styles {
       width: 80%;
       text-align: center;
