--- a/css/cloth.css
+++ b/css/cloth.css
@@ -178,8 +178,8 @@
           @media only screen and (max-width: 491px) {
             .preview-area .preview-img .f .pos2-f .text2 {
               position: relative;
-              top: 40%;
-              left: 20px;
+              top: 193px;
+              left: 22px;
               font-size: 13px; } }
       .preview-area .preview-img .f .pos3-f {
         display: none;
