--- a/sass/cloth.sass
+++ b/sass/cloth.sass
@@ -152,8 +152,8 @@
 					left: 30px
 					@include breakpoint(mobile)
 						position: relative
-						top: 40%
-						left: 20px
+						top: 193px
+						left: 22px
 						font-size: 13px
 
 			.pos3-f
