--- a/sass/cloth.sass
+++ b/sass/cloth.sass
@@ -87,6 +87,9 @@
 						font-size: 20px
 						top: 160px
 						width: 30%
+				.text2
+				    width: 100%
+				    height: 200px
 			.pos2-m
 				display: none
 				@include cloth-style
