add show money page and modify cloth scss

--- a/sass/cloth.sass
+++ b/sass/cloth.sass
@@ -182,6 +182,9 @@
 						font-size: 12px
 						left: -25px
 						top: 190px
+				.text5
+				    width : 100%
+				    height: 200px
 
 
 .work-area
