master add page and sass

--- a/sass/cloth.sass
+++ b/sass/cloth.sass
@@ -295,11 +295,8 @@
 			.title
 				font-size: 30px
 				color: black
-
-		.wow
-		    width: 100%
-        .master
-            width: 100%
+        .master-page
+            width: 100%;
 	
 		
 			
