--- a/sass/cloth.sass
+++ b/sass/cloth.sass
@@ -305,6 +305,21 @@
             width: 100%
         .payMoney-page1
             width: 100%
+
+
+		.wow
+		    width: 100%
+        .master
+            width: 100%
+
+        .payMoney-page
+            width: 100%
+        .payMoney-page1
+            width: 100%
+        .master-page
+            width: 100%;
+        .master-page1
+            width: 80%;
 	
 		
 			
