--- a/sass/cloth.sass
+++ b/sass/cloth.sass
@@ -295,11 +295,13 @@
 			.title
 				font-size: 30px
 				color: black
+        .addMaster1
+            width: 100%
         .addlocal1
             width: 100%
         .addlocal2
             width: 100%
-		
+
 			
 			
 	
