add master into dog

--- a/sass/cloth.sass
+++ b/sass/cloth.sass
@@ -295,12 +295,17 @@
 			.title
 				font-size: 30px
 				color: black
+        .addMaster1
+            width: 100%
+        .addMaster2
+            width: 100%
+
 		    .dog1
 		        width: 50%
 		    .dog2
 		        width: 50%
 
-		
-			
+
+
 			
 	
