--- a/sass/cloth.sass
+++ b/sass/cloth.sass
@@ -297,11 +297,14 @@
 				color: black
         .addMaster1
             width: 100%
+        .addMaster2
+            width: 100%
+
         .addlocal1
             width: 100%
         .addlocal2
             width: 100%
 
-			
+
 			
 	
