add master into myBranch

--- a/sass/cloth.sass
+++ b/sass/cloth.sass
@@ -54,7 +54,8 @@
 	display: inline-block
 	@include breakpoint(pad)
 		width: 100%
-		
+    .master3
+        height: 50px
 	.preview-img
 		width: 100%
 		text-align: center
@@ -268,7 +269,8 @@
 				@include color-items
 				background-image: url("../img/colors/gray.jpg")
 
-
+            .master1
+                width: 100%
 		.styles
 			width: 80%
 			text-align: center
@@ -297,9 +299,12 @@
 			.title
 				font-size: 30px
 				color: black
+			.master2
+			    width: 990px
+
         .local2
             font-size: 20px
-		
+
 			
 			
 	
