--- a/sass/cloth.sass
+++ b/sass/cloth.sass
@@ -266,7 +266,8 @@
 				@include color-items
 				background-image: url("../img/colors/gray.jpg")
 
-
+            .master1
+                width: 100%
 		.styles
 			width: 80%
 			text-align: center
