--- a/sass/cloth.sass
+++ b/sass/cloth.sass
@@ -214,6 +214,8 @@
 			@include color-icons
 			i
 				@include color-icon-i
+			.local1
+			    width: 30px
 	.tool-box
 		width: 80%
 		display: inline-block
