--- a/sass/cloth.sass
+++ b/sass/cloth.sass
@@ -54,7 +54,8 @@
 	display: inline-block
 	@include breakpoint(pad)
 		width: 100%
-		
+    .master3
+        height: 50px
 	.preview-img
 		width: 100%
 		text-align: center
