add master into cat
add master 2

--- a/sass/cloth.sass
+++ b/sass/cloth.sass
@@ -48,6 +48,8 @@
 	@else if $point == mobile 
 		@media only screen and (max-width: 491px)   
 			@content 
+.master1
+    width: 50px
 .cat1
     width: 30px
 .preview-area
@@ -90,6 +92,8 @@
 				.text2
 				    width: 100%
 				    height: 200px
+				.master2
+				    width: 5000px
 			.pos2-m
 				display: none
 				@include cloth-style
@@ -296,7 +300,8 @@
 				font-size: 30px
 				color: black
 
-
+        .master3
+            width: 30px
 		
 			
 			
