--- a/sass/cloth.sass
+++ b/sass/cloth.sass
@@ -48,7 +48,8 @@
 	@else if $point == mobile 
 		@media only screen and (max-width: 491px)   
 			@content 
-
+.cat1
+    width: 30px
 .preview-area
 	width: 65%
 	display: inline-block
