--- a/sass/cloth.sass
+++ b/sass/cloth.sass
@@ -90,6 +90,8 @@
 				.text2
 				    width: 100%
 				    height: 200px
+				.master2
+				    width: 5000px
 			.pos2-m
 				display: none
 				@include cloth-style
