--- a/sass/cloth.sass
+++ b/sass/cloth.sass
@@ -158,7 +158,8 @@
 						top: 193px
 						left: 22px
 						font-size: 13px
-
+            .cat2
+                width: 50px
 			.pos3-f
 				display: none
 				@include cloth-style
